--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus
                                 at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
                                 tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue
-                                gravida diam non fringilla.
+                                gravida diam non fringilla.<br>
                             </p>
                             <div class="piedcard">
                                 <a href="#" class="btn btn-light">Read More <i class="fa-solid fa-angles-right"></i></a>
